# fetmrqc_sr

./: README.md  pyproject.toml
fetmrqc_sr/: version.py
fetmrqc_sr/cli/: inference.py
fetmrqc_sr/data/: QC_IQMs.csv
fetmrqc_sr/data/models/: fetmrqc_SR_full_qcglobal.json
