[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fetmrqc_sr"
version = "0.0.1"
description = "Automated quality control of fetal brain SR MRI scans"
authors = [{name = "XXXX", email = "anon@anon.ch"}]
dependencies = [
    "fetal_brain_qc @ git+https://github.com/Medical-Image-Analysis-Laboratory/fetmrqc@main",
]
[tool.setuptools]
packages = ["fetmrqc_sr"]


[project.scripts]
srqc_segmentation = "fetmrqc_sr.cli.compute_segmentation:main"
srqc_compute_iqms = "fetmrqc_sr.cli.compute_iqms:main"
srqc_train_model = "fetmrqc_sr.cli.train_model:main"
srqc_inference = "fetmrqc_sr.cli.inference:main"
